<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    tools:ignore="SpeakableTextPresentCheck"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Register page"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:gravity="center"/>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:text="@string/otp_verification"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/enter_number" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">


            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/plus91"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/mobnum"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@null"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:hint="1234567890"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number" />





        </LinearLayout>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your name "
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center">

        </EditText>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/sendotp"
                android:text="@string/get_otp"
                android:layout_margin="30dp"
                android:textSize="40dp"
                android:textColor="@color/black"
                android:background="@drawable/bgbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <ProgressBar
                android:id="@+id/otpsent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:layout_gravity="center"/>
        </FrameLayout>

    </LinearLayout>
</ScrollView>