<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Verification page"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:gravity="center"/>
        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/black"
            android:text="@string/otpverify"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textmobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="14sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:background="@drawable/bgbox"
                android:id="@+id/inputotp1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/bgbox"
                android:id="@+id/inputotp2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/bgbox"
                android:id="@+id/inputotp3"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/bgbox"
                android:id="@+id/inputotp4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/bgbox"
                android:id="@+id/inputotp5"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>
            <EditText
                android:background="@drawable/bgbox"
                android:id="@+id/inputotp6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otpnotrcvd"
                android:textColor="@color/black"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/resendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resendotp"
                android:layout_marginLeft="8dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/submitotp"
                android:text="@string/submit"
                android:layout_margin="20dp"
                android:textSize="40dp"
                android:textColor="@color/white"
                android:background="@drawable/bgbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/otpverify"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:layout_gravity="center"/>


        </FrameLayout>

    </LinearLayout>

</ScrollView>